--- a/example/fw/CMakeLists.txt
+++ b/example/fw/CMakeLists.txt
@@ -1,3 +1,8 @@
+#
+# Copyright (c) 2022 MINRES Technolgies GmbH
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 add_custom_target(fw-hello-world
     COMMAND make
     WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/hello-world
